simple-fileupload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-fileupload
spec:
  selector:
    app: simple-fileupload
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
